--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -18,22 +20,22 @@
 <body>
   <div class="container">
 
-    <div class="jumbotron">
-      <h1><i class="fa fa-user" aria-hidden="true"></i> Employee Finder</h1>
+    <div class="jumbotron bg-success">
+      <h1><i class="fab fa-centos" aria-hidden="true"></i> Employee Finder</h1>
       <hr>
       <h2>Want to find friends at work? </h2>
       <h2>Answer these questions and you shall find a new friend.</h2>
       <br>
 
       <div>
-        <a href="/survey"><button class="btn btn-lg btn-primary"><h4><span class="fa fa-list-alt"></span> Take Survay</h4></button></a>
+        <a href="/survey"><button class="btn btn-lg btn-dark bg-dark"><h4><span class="fa fa-list-alt"></span> Take Survay</h4></button></a>
       </div>
 
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/employees">API Employees List</a></p>
+        <p><a href="/api/employees" class="bg-info text-dark">API Employees List</a></p>
       </div>
     </footer>
 
